fixed small text on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,7 @@ footer {
   }
 
   table td:nth-child(2) { 
-    font-size: 22px;
+    font-size: 22px !important;
   }
 
   #skills-spacer {
